kubernetes/guacamole/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole
spec:
  ports:
    - name: guacamole-app
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: guacamole
